--- a/mycontainer/install.properties
+++ b/mycontainer/install.properties
@@ -46,10 +46,10 @@ tomcat.server.port=8080
 ##############
 ###  LDAP  ###
 ##############
-ldap.url=replace_value
-ldap.basedn=replace_value
-ldap.user=cn=NCILDAP,ou=nci,o=nih
-ldap.pass=password
+ldap.url=openldap:1389
+ldap.basedn=dn=example,dc=org
+ldap.user=cn=user01
+ldap.pass=password1
 ldap.user.id.label=cn
 ldap.memberOf.attribute.name=isMemberOf
 ldap.mail.attribute.name=mail
