--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,13 +7,14 @@ services:
       - '3306:3306'
     volumes:
       - './mysql_data:/bitnami/mysql/data'
+      - './sql:/docker-entrypoint-initdb.d'
     environment:
       # ALLOW_EMPTY_PASSWORD is recommended only for development.
       - ALLOW_EMPTY_PASSWORD=yes
       - MYSQL_ROOT_PASSWORD=Mysql1!.
-      - MYSQL_DATABASE=nbiadb
       - MYSQL_USER=nbia_user
       - MYSQL_PASSWORD=nbia_password
+      - MYSQL_DATABASE=nbiadb
     healthcheck:
       test: ['CMD', '/opt/bitnami/scripts/mysql/healthcheck.sh']
       interval: 15s
@@ -27,3 +28,13 @@ services:
     environment:
       - ALLOW_EMPTY_PASSWORD=yes
       - JAVA_OPTS=-Xms2048m -Xmx2048m
+  openldap:
+    image: bitnami/openldap:2
+    ports:
+      - '1389:1389'
+      - '1636:1636'
+    environment:
+      - LDAP_ADMIN_USERNAME=admin
+      - LDAP_ADMIN_PASSWORD=adminpassword
+      - LDAP_USERS=user01,user02
+      - LDAP_PASSWORDS=password1,password2
