--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - '3306:3306'
     volumes:
-      - './mysql_data:/bitnami/mysql/data'
+      #- './mysql_data:/bitnami/mysql/data'
       - './sql:/docker-entrypoint-initdb.d'
     environment:
       # ALLOW_EMPTY_PASSWORD is recommended only for development.
