--- a/nbia_container/Dockerfile
+++ b/nbia_container/Dockerfile
@@ -31,11 +31,11 @@ RUN ant
 FROM tomcat:9.0.58-jdk8-corretto
 
 # ====== DELETE ======
-RUN yum install -y less vim yum-utils wget
-RUN yum-config-manager --add-repo=https://copr.fedorainfracloud.org/coprs/carlwgeorge/ripgrep/repo/epel-7/carlwgeorge-ripgrep-epel-7.repo
-RUN yum install -y ripgrep
-RUN wget https://download-ib01.fedoraproject.org/pub/epel/7/x86_64/Packages/x/xmlstarlet-1.6.1-1.el7.x86_64.rpm
-RUN yum install -y xmlstarlet-1.6.1-1.el7.x86_64.rpm
+# RUN yum install -y less vim yum-utils wget
+# RUN yum-config-manager --add-repo=https://copr.fedorainfracloud.org/coprs/carlwgeorge/ripgrep/repo/epel-7/carlwgeorge-ripgrep-epel-7.repo
+# RUN yum install -y ripgrep
+# RUN wget https://download-ib01.fedoraproject.org/pub/epel/7/x86_64/Packages/x/xmlstarlet-1.6.1-1.el7.x86_64.rpm
+# RUN yum install -y xmlstarlet-1.6.1-1.el7.x86_64.rpm
 # ==== ALL OF THIS ===
 
 WORKDIR /usr/local/tomcat
@@ -50,6 +50,3 @@ RUN echo "tomcat.util.scan. StandardJarScanFilter.jarsToSkip=bcprov*.jar" >> con
 RUN cp -r webapps.dist/* webapps
 RUN cp -r /opt/nbia/webapps/* webapps
 RUN export JAVA_OPTS="$JAVA_OPTS -Djava.security.auth.login.config=$CATALINA_HOME/conf/jaas.config"
-
-WORKDIR /usr/local/tomcat/bin
-CMD ["catalina.sh" "run"]
