--- a/nbia_container/Dockerfile
+++ b/nbia_container/Dockerfile
@@ -1,7 +1,7 @@
 FROM docker.io/bitnami/java:1.8 as builder
 RUN install_packages ant
 ADD installer/ /opt/installer
-COPY install.properties /opt/installer
+COPY config/install.properties /opt/installer
 WORKDIR /opt/installer
 RUN ant
 
@@ -23,6 +23,7 @@ RUN cp -r /opt/nbia/lib/* lib
 COPY ./tomcat-users.xml conf/
 COPY ./context.xml webapps.dist/host-manager/META-INF
 COPY ./context.xml webapps.dist/manager/META-INF
+COPY config/nbia.properties conf/
 RUN echo "tomcat.util.scan. StandardJarScanFilter.jarsToSkip=bcprov*.jar" >> conf/catalina.properties
 RUN cp -r webapps.dist/* webapps
 RUN cp -r /opt/nbia/webapps/* webapps
