--- a/nbia_container/Makefile
+++ b/nbia_container/Makefile
@@ -1,5 +1,9 @@
 default: build
 
+copy:
+	rm -rf insatller/
+	cp -r ~/work/NBIA-TCIA/software/target/dist/exploded installer/
+
 build:
 	docker build -t jrutecht/nbiatomcat:latest .
 
