--- a/nbia_container/config/install.properties
+++ b/nbia_container/config/install.properties
@@ -47,7 +47,7 @@ tomcat.server.port=8080
 ###  LDAP  ###
 ##############
 ldap.url=openldap:1389
-ldap.basedn=dn=example,dc=org
+ldap.basedn=dc=example,dc=org
 ldap.user=cn=user01
 ldap.pass=password1
 ldap.user.id.label=cn
@@ -143,10 +143,10 @@ exclude.start.servers=true
 exclude.ctp=true
 exclude.ctp-client=true
 exclude.database=true
-#exclude.jboss.backup=true
+exclude.jboss.backup=true
 exclude.ctp.client.backup=true
 exclude.ctp.server.backup=true
-#exclude.jboss.config=true
+exclude.jboss.config=true
 #exclude.nbia-api=true
 
 ###################################################
@@ -163,9 +163,9 @@ nbia.wiki.base.url=https://wiki.cancerimagingarchive.net/display/NBIA/
 ###  SOLR        ###
 ####################
 gov.nih.nci.ncia.solr.updateinterval=60
-gov.nih.nci.ncia.solr.type=external
+gov.nih.nci.ncia.solr.type=single
 gov.nih.nci.ncia.solr.urls=http://solr:8983/solr
-gov.nih.nci.ncia.solr.indexer=no
+gov.nih.nci.ncia.solr.indexer=yes
 
 ####################
 ###  TOMCAT      ###
