--- a/nbia_container/config/nbia.properties
+++ b/nbia_container/config/nbia.properties
@@ -2,7 +2,7 @@
 ###  LDAP  ###
 ##############
 ldap.url=ldap://openldap:1389
-ldap.basedn=dn=example,dc=org
+ldap.basedn=dc=example,dc=org
 ldap.user=cn=user01
 ldap.pass=password1
 ldap.user.id.label=cn
@@ -13,6 +13,14 @@ ldap.group.ignore.list=PwmAdmins,devTeam,testGroup
 public.collection.access.group.name=General User
 product.variation=NBIA
 authentication.type=ldap-auth
+
+
+####################
+###  REST OAUTH  ###
+####################
+nbia.api.oauth2.client.id=nbiaRestAPIClient
+nbia.api.oauth2.client.secret=ItsBetweenUAndMe
+nbia.api.oauth2.token.validity.in.seconds=7200
 
 usergroup.list.email=LISTSERV@LIST.NIH.GOV
 usergroup.list.name=NBIA_USER-L
@@ -47,10 +55,10 @@ gov.nih.nci.ncia.download.server.url=@gov.nih.nci.ncia.download.server.url@
 enable_classic_download=@enable_classic_download@
 registration.email.subject=@registration.email.subject@
 gov.nih.nci.ncia.solr.updateinterval=60
-gov.nih.nci.ncia.solr.type=external
+gov.nih.nci.ncia.solr.type=single
 gov.nih.nci.ncia.solr.urls=http://solr:8983/solr
 gov.nih.nci.ncia.solr.indexer=no
-gov.nih.nci.ncia.workflow.updateinterval=@gov.nih.nci.ncia.workflow.updateinterval@
+gov.nih.nci.ncia.workflow.updateinterval=60
 lookupManager.className=gov.nih.nci.nbia.lookup.LookupManagerImpl
 patientSearcherService.className=gov.nih.nci.nbia.search.LocalPatientSearcherService
 drilldown.className=gov.nih.nci.nbia.search.LocalDrillDown
