--- a/nbia_container/Makefile
+++ b/nbia_container/Makefile
@@ -1,8 +1,9 @@
 default: build
 
 copy:
-	rm -rf insatller/
+	rm -irf installer/
 	cp -r ~/work/NBIA-TCIA/software/target/dist/exploded installer/
+	rm installer/nbia-wars/ncia.war
 
 build:
 	docker build -t jrutecht/nbiatomcat:latest .
