--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
       - '8080:8080'
     environment:
       - ALLOW_EMPTY_PASSWORD=yes
-      - JAVA_OPTS=-Djava.security.auth.login.config=/usr/local/tomcat/conf/jaas.config
+      - JAVA_OPTS=-Djava.security.auth.login.config=/usr/local/tomcat/conf/jaas.config -Dlog4j.configuration=/usr/local/tomcat/lib/log4j.properties
   openldap:
     image: bitnami/openldap:2
     ports:
