updated ldap credentials

--- a/nbia_container/config/install.properties
+++ b/nbia_container/config/install.properties
@@ -46,10 +46,10 @@ tomcat.server.port=8080
 ##############
 ###  LDAP  ###
 ##############
-ldap.url=openldap:1389
+ldap.url=ldap://openldap:1389
 ldap.basedn=dc=example,dc=org
-ldap.user=cn=user01
-ldap.pass=password1
+ldap.user=cn=admin
+ldap.pass=adminpassword
 ldap.user.id.label=cn
 ldap.memberOf.attribute.name=isMemberOf
 ldap.mail.attribute.name=mail
