--- a/nbia_container/config/nbia.properties
+++ b/nbia_container/config/nbia.properties
@@ -3,8 +3,8 @@
 ##############
 ldap.url=ldap://openldap:1389
 ldap.basedn=dc=example,dc=org
-ldap.user=cn=user01
-ldap.pass=password1
+ldap.user=cn=admin
+ldap.pass=adminpassword
 ldap.user.id.label=cn
 #For Sync Group Info from LDAP to DB
 ldap.memberOf.attribute.name=isMemberOf
