--- a/nbia_container/config/install.properties
+++ b/nbia_container/config/install.properties
@@ -47,15 +47,15 @@ tomcat.server.port=8080
 ###  LDAP  ###
 ##############
 ldap.url=ldap://openldap:1389
-ldap.basedn=dc=example,dc=org
-ldap.user=cn=admin
+ldap.basedn=ou=Users,dc=example,dc=org
+ldap.user=cn=admin,dc=example,dc=org
 ldap.pass=adminpassword
 ldap.user.id.label=cn
-ldap.memberOf.attribute.name=isMemberOf
-ldap.mail.attribute.name=mail
+ldap.memberOf.attribute.name=memberOf
+ldap.mail.attribute.name=cn
 #ldap.group.ignore.list=PwmAdmins,devTeam,nlst,testGroup
-public.collection.access.group.name=General User
-product.variation=NBIA
+public.collection.access.group.name=readers
+product.variation=TCIA
 ###############
 #    PWM      #
 ###############
@@ -104,7 +104,7 @@ gov.nih.nci.ncia.admin.email=ncicbmb@mail.nih.gov
 gov.nih.nci.ncia.jboss.public.url=http://localhost:8080/ncia/
 gov.nih.nci.ncia.download.server.url=http://localhost:8080/nbia-download/servlet/DownloadServlet
 enabled_guest_account=yes
-guest_username=nbia_guest
+guest_username=user01
 enable_classic_download=yes
 registration.email.subject="User Registration to LDAP to Access the National Biomedical Imaging Archive (NBIA)"
 show.collection.search.criteria=true
