--- a/nbia_container/config/nbia.properties
+++ b/nbia_container/config/nbia.properties
@@ -2,16 +2,16 @@
 ###  LDAP  ###
 ##############
 ldap.url=ldap://openldap:1389
-ldap.basedn=dc=example,dc=org
-ldap.user=cn=admin
+ldap.basedn=ou=Users,dc=example,dc=org
+ldap.user=cn=admin,dc=example,dc=org
 ldap.pass=adminpassword
 ldap.user.id.label=cn
 #For Sync Group Info from LDAP to DB
-ldap.memberOf.attribute.name=isMemberOf
-ldap.mail.attribute.name=mail
-ldap.group.ignore.list=PwmAdmins,devTeam,testGroup
-public.collection.access.group.name=General User
-product.variation=NBIA
+ldap.memberOf.attribute.name=memberOf
+ldap.mail.attribute.name=cn
+#ldap.group.ignore.list=PwmAdmins,devTeam,testGroup
+public.collection.access.group.name=readers
+product.variation=TCIA
 authentication.type=ldap-auth
 
 
