--- a/nbia_container/config/install.properties
+++ b/nbia_container/config/install.properties
@@ -104,7 +104,7 @@ gov.nih.nci.ncia.admin.email=ncicbmb@mail.nih.gov
 gov.nih.nci.ncia.jboss.public.url=http://localhost:8080/ncia/
 gov.nih.nci.ncia.download.server.url=http://localhost:8080/nbia-download/servlet/DownloadServlet
 enabled_guest_account=yes
-guest_username=user01
+guest_username=nbia_guest
 enable_classic_download=yes
 registration.email.subject="User Registration to LDAP to Access the National Biomedical Imaging Archive (NBIA)"
 show.collection.search.criteria=true
