--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,22 +2,21 @@ version: '2.1'
 
 services:
   mysql:
-    image: bitnami/mysql:5.7
+    image: bitnami/mariadb:10.5.9
     ports:
       - '3306:3306'
     volumes:
-      - 'mysql_data:/bitnami/mysql/data'
+      - 'mariadb_data:/bitnami/mariadb'
       - './sql:/docker-entrypoint-initdb.d'
-      - './my.cnf:/opt/bitnami/mysql/conf/my_custom.cnf:ro'
     environment:
       # ALLOW_EMPTY_PASSWORD is recommended only for development.
       - ALLOW_EMPTY_PASSWORD=yes
-      - MYSQL_ROOT_PASSWORD=Mysql1!.
-      - MYSQL_USER=nbia_user
-      - MYSQL_PASSWORD=nbia_password
-      - MYSQL_DATABASE=nbiadb
+      - MARIADB_ROOT_PASSWORD=Mysql1!.
+      - MARIADB_USER=nbia_user
+      - MARIADB_PASSWORD=nbia_password
+      - MARIADB_DATABASE=nbiadb
     healthcheck:
-      test: ['CMD', '/opt/bitnami/scripts/mysql/healthcheck.sh']
+      test: ['CMD', '/opt/bitnami/scripts/mariadb/healthcheck.sh']
       interval: 15s
       timeout: 5s
       retries: 6
@@ -55,5 +54,5 @@ services:
     ports:
       - '8983:8983'
 volumes:
-  mysql_data:
+  mariadb_data:
     driver: local
