--- a/nbia_container/config/log4j.properties
+++ b/nbia_container/config/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger = DEBUG, CATALINA, stdout
+log4j.rootLogger = DEBUG, CATALINA
 
 # Define all the appenders
 log4j.appender.CATALINA = org.apache.log4j.DailyRollingFileAppender
@@ -46,9 +46,8 @@ log4j.logger.org.apache.catalina.core.ContainerBase.[Catalina].[localhost].[/man
 log4j.logger.org.apache.catalina.core.ContainerBase.[Catalina].[localhost].[/host-manager] =\
   DEBUG, HOST-MANAGER
 log4j.logger.org.apache.solr=WARN
-log4j.logger.org.hibernate.cfg=WARN
 
-log4j.logger.LDAPSyncRPT=DEBUG, LDAPSyncRPT
+log4j.logger.LDAPSyncRPT=INFO, LDAPSyncRPT
 log4j.additivity.LDAPSyncRPT=false
 log4j.appender.LDAPSyncRPT=org.apache.log4j.FileAppender
 log4j.appender.LDAPSyncRPT.Append = true
