--- a/nbia_container/Dockerfile
+++ b/nbia_container/Dockerfile
@@ -28,7 +28,7 @@ RUN echo "tomcat.util.scan. StandardJarScanFilter.jarsToSkip=bcprov*.jar" >> con
 RUN cp -r webapps.dist/* webapps
 RUN cp -r /opt/nbia/webapps/* webapps
 RUN export JAVA_OPTS="$JAVA_OPTS -Djava.security.auth.login.config=$CATALINA_HOME/conf/jaas.config"
-RUN sed -i 's/java.util.logging.ConsoleHandler.level = FINE/java.util.logging.ConsoleHandler.level = ALL/g' conf/logging.properties
+# RUN sed -i 's/java.util.logging.ConsoleHandler.level = FINE/java.util.logging.ConsoleHandler.level = ALL/g' conf/logging.properties
 COPY config/log4j.properties lib/log4j.properties
 # RUN rm conf/logging.properties
 # RUN rm lib/log4j.properties
