--- a/nbia_container/config/log4j.properties
+++ b/nbia_container/config/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger = DEBUG, CATALINA
+log4j.rootLogger = DEBUG, CATALINA, stdout
 
 # Define all the appenders
 log4j.appender.CATALINA = org.apache.log4j.DailyRollingFileAppender
