lower_case_table_names

--- a/my.cnf
+++ b/my.cnf
@@ -15,7 +15,7 @@ log_error=/opt/bitnami/mariadb/logs/mysqld.log
 character_set_server=utf8
 collation_server=utf8_general_ci
 plugin_dir=/opt/bitnami/mariadb/lib/plugin
-lowercase_tablenames=1
+lower_case_table_names=1
 
 [client]
 port=3306
