better sql data load

--- a/build_container/Makefile
+++ b/build_container/Makefile
@@ -11,10 +11,10 @@ push:
 	docker push jrutecht/nbiatomcat:latest
 
 external:
-	rm -irf installer/
-	rm -irf ../tomcatfile/*
+	rm -irf installer
+	rm -irf ../tomcatfile
 	cp -r ~/work/NBIA-TCIA/software/target/dist/exploded installer/
-	cp config/external_install.properties installer
-	ant installer/
-	cp config/log4j.properties ../tomcatfile/lib
-	cp config/nbia.properties ../tomcatfile/lib
+	cp config/external_install.properties installer/install.properties
+	ant -f installer/build.xml
+	cp config/log4j.properties ../tomcatfiles/lib
+	cp config/nbia.properties ../tomcatfiles/lib
