fixed app names

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,11 +27,11 @@ services:
       - './webapps/nbia-api.war:/opt/bitnami/tomcat/webapps_default/nbia-api.war'
       - './webapps/nbia-download.war:/opt/bitnami/tomcat/webapps_default/nbia-download.war'
       - './webapps/ncia.war:/opt/bitnami/tomcat/webapps_default/ncia.war'
-      - './webapps/ncia-admin/:/opt/bitnami/tomcat/webapps_default/ncia-admin/'
-      - './webapps/ncia-search/:/opt/bitnami/tomcat/webapps_default/ncia-search/'
-      - './webapps/ncia-search-cover/:/opt/bitnami/tomcat/webapps_default/ncia-search-cover/'
-      - './webapps/ncia-uat/:/opt/bitnami/tomcat/webapps_default/ncia-uat/'
-      - './webapps/ncia-viewer/:/opt/bitnami/tomcat/webapps_default/ncia-viewer/'
+      - './webapps/nbia-admin/:/opt/bitnami/tomcat/webapps_default/nbia-admin/'
+      - './webapps/nbia-search/:/opt/bitnami/tomcat/webapps_default/nbia-search/'
+      - './webapps/nbia-search-cover/:/opt/bitnami/tomcat/webapps_default/nbia-search-cover/'
+      - './webapps/nbia-uat/:/opt/bitnami/tomcat/webapps_default/nbia-uat/'
+      - './webapps/nbia-viewer/:/opt/bitnami/tomcat/webapps_default/nbia-viewer/'
       - './tomcatfiles/conf/context.xml:/opt/bitnami/tomcat/conf/context.xml'
       - './tomcatfiles/conf/server.xml:/opt/bitnami/tomcat/conf/server.xml'
       - './tomcatfiles/conf/jaas.config:/opt/bitnami/tomcat/conf/jaas.config'
