--- a/build_container/config/install.properties
+++ b/build_container/config/install.properties
@@ -60,7 +60,7 @@ product.variation=TCIA
 #    PWM      #
 ###############
 #gov.nih.nci.ncia.registration.server=http://localhost/pwm/public/NewUser
-gov.nih.nci.ncia.registration.server=http://localhost:8080/ncia/registerMain.jsf
+gov.nih.nci.ncia.registration.server=http://nbia-collectionmanager.apps.dbmi.cloud/ncia/registerMain.jsf
 ###############
 # TCIA BUILD  #
 ###############
@@ -90,7 +90,7 @@ ctp.client.exportService.password=client
 # NCIA Application Properties # 
 ###############################
 #BEWARE!!!! DON'T USE PROPERTIES LIKE ${..} IN THESE PROPERTY DEFINITONS!!!
-gov.nih.nci.ncia.imaging.server.url=http://localhost:8080
+gov.nih.nci.ncia.imaging.server.url=http://nbia-collectionmanager.apps.dbmi.cloud:8080
 gov.nih.nci.ncia.mapped.image.path.head=\\\\\\\\cbiofs502.nci.nih.gov\\\\nciaimages\\\\,\\\\\\\\cbiofs502.nci.nih.gov\\\\nciaproddataset\\\\dataset_p01\\\\,\\\\\\\\nfs-ncia-d.nci.nih.gov\\\\nciadevdataset\\\\dataset_d01\\\\
 gov.nih.nci.ncia.image.path.pattern=NCICBIMAGE/documents/,data/dataset_p01/,data/dataset_d01/
 gov.nih.nci.ncia.zip.location=/data/nbia_data/nbia_ftp
@@ -102,7 +102,7 @@ gov.nih.nci.ncia.jboss.mq.url=localhost:4447
 gov.nih.nci.ncia.installationSite=other
 gov.nih.nci.ncia.admin.email=ncicbmb@mail.nih.gov
 gov.nih.nci.ncia.jboss.public.url=http://localhost:8080/ncia/
-gov.nih.nci.ncia.download.server.url=http://localhost:8080/nbia-download/servlet/DownloadServlet
+gov.nih.nci.ncia.download.server.url=http://nbia-collectionmanager.apps.dbmi.cloud/nbia-download/servlet/DownloadServlet
 enabled_guest_account=yes
 guest_username=nbia_guest
 enable_classic_download=yes
