--- a/build_container/config/log4j.properties
+++ b/build_container/config/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger = DEBUG, CATALINA, stdout
+log4j.rootLogger = INFO, CATALINA
 
 # Define all the appenders
 log4j.appender.CATALINA = org.apache.log4j.DailyRollingFileAppender
@@ -54,8 +54,3 @@ log4j.appender.LDAPSyncRPT.Append = true
 log4j.appender.LDAPSyncRPT.File=${catalina.base}/logs/LDAPSyncRPT.log
 log4j.appender.LDAPSyncRPT.layout=org.apache.log4j.PatternLayout
 log4j.appender.LDAPSyncRPT.layout.ConversionPattern=%d [%24F:%L] %-5p %c- %m%n
-
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.Target=System.out
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
