--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     volumes:
       - 'mariadb_data:/bitnami/mariadb'
       - './sql:/docker-entrypoint-initdb.d'
-      - './my.cnf:/opt/bitnami/mariadb/conf/my_custom.cnf:ro'
+      - './my.cnf:/opt/bitnami/mariadb/conf/my_custom.cnf'
     environment:
       # ALLOW_EMPTY_PASSWORD is recommended only for development.
       - ALLOW_EMPTY_PASSWORD=yes
