fixed permissions on dicom dir

--- a/allinone/Dockerfile
+++ b/allinone/Dockerfile
@@ -3,9 +3,11 @@ FROM jrutecht/bitnami-tomcat9-jdk18:v1.0
 COPY tomcatfiles/webapps /opt/bitnami/tomcat/webapps_default
 COPY tomcatfiles/conf /opt/bitnami/tomcat/conf
 COPY tomcatfiles/lib /opt/bitnami/tomcat/lib
-COPY dicoms /opt/dicoms
 
 RUN chmod g+w -R /opt/bitnami/tomcat
+
+RUN mkdir /opt/dicoms
+RUN chmod g+w -R /opt/dicoms
 
 ENV ALLOW_EMPTY_PASSWORD="yes" \
     TOMCAT_ALLOW_REMOTE_MANAGEMENT="yes" \
