--- a/tomcatfiles/lib/nbia.properties
+++ b/tomcatfiles/lib/nbia.properties
@@ -291,7 +291,7 @@ species.code=337915000
 ##############################################
 ###   Collection Site Creation Properties  ###
 ##############################################
-ctp.block.creating.newCollectionSite=true
+ctp.block.creating.newCollectionSite=false
 uat.enable.creating.newCollectionSite=true
 uat.enable.assign.user.to.userGroup=true
 uat.enable.assign.user.to.protectionGroup=true
