--- a/tomcatfiles/conf/jaas.config
+++ b/tomcatfiles/conf/jaas.config
@@ -1,9 +1,11 @@
 NCIA
 {
-gov.nih.nci.security.authentication.loginmodules.LDAPLoginModule Required
-ldapHost="ldap://openldap:1389"
-ldapSearchableBase="ou=Users,dc=example,dc=org"
-ldapUserIdLabel="cn"
-ldapAdminUserName="cn=admin,dc=example,dc=org"
-ldapAdminPassword="adminpassword";
+gov.nih.nci.security.authentication.loginmodules.LDAPLoginModule Sufficient
+ldapHost="ldap://172.20.4.157:1389"
+ldapSearchableBase="ou=users,dc=cancerimagingarchive,dc=net"
+ldapUserIdLabel="cn";
+gov.nih.nci.security.authentication.loginmodules.LDAPLoginModule Sufficient
+ldapHost="ldap://144.30.1.70:1389"
+ldapSearchableBase="ou=users,dc=cancerimagingarchive,dc=net"
+ldapUserIdLabel="cn";
 };
