--- a/tomcatfiles/lib/log4j.properties
+++ b/tomcatfiles/lib/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger = DEBUG, CATALINA, stdout
+log4j.rootLogger = INFO, CATALINA, stdout
 
 # Define all the appenders
 log4j.appender.CATALINA = org.apache.log4j.DailyRollingFileAppender
@@ -47,7 +47,7 @@ log4j.logger.org.apache.catalina.core.ContainerBase.[Catalina].[localhost].[/hos
   DEBUG, HOST-MANAGER
 log4j.logger.org.apache.solr=WARN
 
-log4j.logger.LDAPSyncRPT=INFO, LDAPSyncRPT
+log4j.logger.LDAPSyncRPT=INFO, LDAPSyncRPT, stdout
 log4j.additivity.LDAPSyncRPT=false
 log4j.appender.LDAPSyncRPT=org.apache.log4j.FileAppender
 log4j.appender.LDAPSyncRPT.Append = true
